added another section with a button

--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
 	<li><button>Here</button></li>
 	</ul>
 </div>
+<div>
+	<ul>
+	<li><button>Here</button></li>
+	<li><button>Here</button></li>
+	</ul>
+</div>
 </body>
 </html>
